# backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.agents/skills/fastapi-best-practices/: SKILL.md
.agents/skills/fastapi-testing-practices/: SKILL.md
src/reexplain_api/: __init__.py  config.py  main.py  models.py  security.py
src/reexplain_api/api/: router.py
src/reexplain_api/api/routes/: learning.py  pdf.py
src/reexplain_api/services/: openai.py
tests/: test_learning.py  test_pdf.py
